bad/div_invalid_types_void_string.example_compiler_output
ERROR
[1mbad/div_invalid_types_void_string.lat:5:8: [1;31merror: [0;1mdivision is defined only for int values, not `void` and `string`[m
	foo() / "xyz";
	      [1;32m^[m
